k8s/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
spec:
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - image: php-mysqli:latest
        name: php
        ports:
        - containerPort: 9000
          name: php
        volumeMounts:
        - name: php-code
          mountPath: /var/www/html
      volumes:
      - name: php-code
        configMap:
          name: php-code
