k8s/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php
spec:
  ports:
  - port: 9000
  selector:
    app: php
